Old added Quick Favorites items cant be removed #64346

Closed
opened 2019-05-09 03:15:04 +02:00 by Rombout Versluijs · 13 comments

System Information
Operating system: Darwin-15.6.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris Pro OpenGL Engine Intel Inc. 4.1 INTEL-10.14.74

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74
Worked: (optional)

Short description of error
SInce some items have been moved, renamed, i cant delete them from the quick-menu. They show some OT name which i guess is related to missing links. I cant right click to remove these items

Exact steps for others to reproduce the error
Not sure how to replicate this. One thing which can be done is installing older build add items to the quick menu which have been renamed. Than install new version

this is what i see in the console

uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator
python line lookup failed, interpreter inactive
uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator
python line lookup failed, interpreter inactive
uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator
python line lookup failed, interpreter inactive
uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator
python line lookup failed, interpreter inactive
uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator
python line lookup failed, interpreter inactive
uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator
python line lookup failed, interpreter inactive
uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator
python line lookup failed, interpreter inactive

This how the favorites menu looks like
Screen Shot 2019-05-08 at 21.11.40.png

**System Information** Operating system: Darwin-15.6.0-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris Pro OpenGL Engine Intel Inc. 4.1 INTEL-10.14.74 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: `3dc9da3a74` Worked: (optional) **Short description of error** SInce some items have been moved, renamed, i cant delete them from the quick-menu. They show some OT name which i guess is related to missing links. I cant right click to remove these items **Exact steps for others to reproduce the error** Not sure how to replicate this. One thing which can be done is installing older build add items to the quick menu which have been renamed. Than install new version this is what i see in the console ``` uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator python line lookup failed, interpreter inactive uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator python line lookup failed, interpreter inactive uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator python line lookup failed, interpreter inactive uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator python line lookup failed, interpreter inactive uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator python line lookup failed, interpreter inactive uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator python line lookup failed, interpreter inactive uiItemFullO: 'WM_OT_tool_set_by_name' unknown operator python line lookup failed, interpreter inactive ``` This how the favorites menu looks like ![Screen Shot 2019-05-08 at 21.11.40.png](https://archive.blender.org/developer/F7019142/Screen_Shot_2019-05-08_at_21.11.40.png)

Added subscriber: @RomboutVersluijs

Added subscriber: @RomboutVersluijs

#64882 was marked as duplicate of this issue

#64882 was marked as duplicate of this issue

I did some searching and i guess this is somehow hardcoded. THe only thing i can find for the quick favorites is "SCREEN_MT_user_menu". This is in 2 files, i can find the operator though, so probably that is hardcoded. Yet i wonder where all this data is stored.

I did some searching and i guess this is somehow hardcoded. THe only thing i can find for the quick favorites is "SCREEN_MT_user_menu". This is in 2 files, i can find the operator though, so probably that is hardcoded. Yet i wonder where all this data is stored.
Rombout Versluijs changed title from Add quickmenu items cant be removed to Old added Quick Favorites items cant be removed 2019-05-09 03:43:17 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-05-09 09:35:55 +02:00
Member

Will check on this

Will check on this

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note that we will eventually want a menu editor so it might not be necessary that all operations be possible from the menu it's self.

Note that we will eventually want a menu editor so it might not be necessary that all operations be possible from the menu it's self.
Member

@ideasman42 : just checking if adding an operator that clears invalid entries would be sufficient? This could be placed at the top of the list [if anything invalid is found]
(at first sight this would be easier than trying to jump through hoops making the (disabled) labels that get into the menu be actually right-clickable to spawn the other menu that has Remove From Quick Favorites in it...)

Not sure if this matches a menu editor design (thus asking...).

@ideasman42 : just checking if adding an operator that clears invalid entries would be sufficient? This could be placed at the top of the list [if anything invalid is found] (at first sight this would be easier than trying to jump through hoops making the (disabled) labels that get into the menu be actually right-clickable to spawn the other menu that has `Remove From Quick Favorites` in it...) Not sure if this matches a menu editor design (thus asking...).
Member

Added subscriber: @DaddyPreggo

Added subscriber: @DaddyPreggo

Added subscriber: @brecht

Added subscriber: @brecht

I suggest to just automatically hide any invalid menu entries, and deal with more advanced editing or cleanup later.

I suggest to just automatically hide any invalid menu entries, and deal with more advanced editing or cleanup later.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

As a note, this build 2.80 (sub 72), 9bae9b634e, 2019-05-28 21:07 now has this fixed. I dont see those OT "errors" in the menu

Screen Shot 2019-05-28 at 23.59.29.png

As a note, this build 2.80 (sub 72), 9bae9b634ec6, 2019-05-28 21:07 now has this fixed. I dont see those OT "errors" in the menu ![Screen Shot 2019-05-28 at 23.59.29.png](https://archive.blender.org/developer/F7077089/Screen_Shot_2019-05-28_at_23.59.29.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64346
No description provided.