Mitigate T64346: Quick Favorites items cant be removed

For now don't show missing quick favorite menu items which are missing.

Once menu editing is supported they could be displayed.